k8s/grafana-externalname-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-external
  namespace: order-service
spec:
  type: ExternalName
  externalName: grafana.monitoring.svc.cluster.local
  ports:
    - port: 3000
