k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: order-service
spec:
  selector:
    statefulset.kubernetes.io/pod-name: postgres-0
  ports:
    - port: 5432
      targetPort: 5432
