k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: order-service
spec:
  type: NodePort
  selector:
    app: order-service
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30080
